logs/alfajor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/alfajor'...
Compiling './lib/python3.5/site-packages/alfajor/_management.py'...
***   File "./lib/python3.5/site-packages/alfajor/_management.py", line 47
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alfajor/browsers'...
Compiling './lib/python3.5/site-packages/alfajor/browsers/selenium.py'...
***   File "./lib/python3.5/site-packages/alfajor/browsers/selenium.py", line 136
    except RuntimeError, detail:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alfajor/runners'...
Compiling './lib/python3.5/site-packages/alfajor/runners/nose.py'...
***   File "./lib/python3.5/site-packages/alfajor/runners/nose.py", line 101
    except ManagerLookupError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alfajor/utilities.py'...
***   File "./lib/python3.5/site-packages/alfajor/utilities.py", line 145
    except (NameError, ImportError), exc:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alfajor-0.1.egg-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/browser'...
Compiling './lib/python3.5/site-packages/tests/browser/webapp.py'...
***   File "./lib/python3.5/site-packages/tests/browser/webapp.py", line 35
    except NotFound, exc:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/client'...
Compiling './lib/python3.5/site-packages/tests/client/webapp.py'...
***   File "./lib/python3.5/site-packages/tests/client/webapp.py", line 34
    except NotFound, exc:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
